[package]
name = "helix-cli"
version = "2.1.5"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { workspace = true } #unified
clap = { workspace = true } #unified
color-eyre = "0.6.5"
dirs = { workspace = true } #unified
dotenvy = { workspace = true } #unified
eyre = "0.6.12"
flume = { workspace = true } #unified
futures-util = "0.3.31"
heed3 = { workspace = true } #unified
helix-db = { path = "../helix-db" }
helix-metrics = { path = "../metrics" }
indicatif = "0.18.3"
iota = "0.2.3"
open = "5.3"
regex = "1.11.2"
reqwest = { workspace = true } #unified
reqwest-eventsource = "0.6"
self_update = "0.42.0"
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
tokio = { workspace = true } #unified
tokio-tungstenite = "0.28.0"
toml = "0.9.5"
uuid = { workspace = true, features = ["v4", "v6"] } #unified
webbrowser = "1.0"

[dev-dependencies]
tempfile = { workspace = true } #unified

[lib]
name = "helix_cli"
path = "src/lib.rs"

[[bin]]
name = "helix"
path = "src/main.rs"

[features]
normal = ["helix-db/server"]
ingestion = ["helix-db/full"]
default = ["normal"]
