[package]
name = "helix-container"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bumpalo = { workspace = true } #unified
chrono = { workspace = true } #unified
dirs = { workspace = true } #unified
dotenvy = { workspace = true } #unified
heed3 = { workspace = true } #unified
helix-db = { path = "../helix-db" }
helix-macros = { path = "../helix-macros" }
inventory = { workspace = true } #unified
rand = { workspace = true } #unified
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
sonic-rs = "0.5.0"
tokio = { workspace = true } #unified
tracing = { workspace = true } #unified
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { workspace = true, features = ["std", "v4", "v6"] } #unified

[features]
dev = ["helix-db/dev-instance"]
