[package]
name = "helix-db"
version = "1.1.5"
edition = "2024"
description = "HelixDB is a powerful, open-source, graph-vector database built in Rust for intelligent data storage for RAG and AI."
license = "AGPL-3.0"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
bincode = "1.3.3" # TODO: Figure out bincode 2 impl with current serde impl
bumpalo = { workspace = true } #unified
bytemuck = "1.24.0"
chrono = { workspace = true } #unified
core_affinity = "0.8.3"
flume = { workspace = true } #unified
heed3 = { workspace = true } #unified
# HelixDB dependencies
helix-macros = { path = "../helix-macros" }
helix-metrics = { path = "../metrics" }
inventory = { workspace = true } #unified
itertools = "0.14.0"
mimalloc = "0.1.48"
paste = "1.0.15"

# compiler dependencies
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }
polars = { version = "0.46.0", features = [
    "parquet",
    "lazy",
    "json",
], optional = true }
rand = "0.9.0"
rayon = "1.11.0"
reqwest = { workspace = true, optional = true } #unified
serde = { workspace = true } #unified
sha2 = { workspace = true } #unified
sonic-rs = "0.5.0"
subtle = "2.5"
tempfile = { workspace = true } #unified
thiserror = "2.0.12"
tokio = { workspace = true } #unified
tokio-util = { version = "0.7.15", features = ["compat"] }
tracing = { workspace = true } #unified
twox-hash = "2.1.0"
url = { version = "2.5", optional = true }
uuid = { workspace = true, features = ["serde", "v4", "v6"] } #unified

[dev-dependencies]
criterion = "0.5"
lazy_static = "1.4.0"
loom = "0.7"          # Concurrency model checking
num_cpus = { workspace = true } #unified
proptest = "1.4"
rand = { workspace = true } #unified
tokio-test = "0.4"    # Tokio testing utilities

[features]
debug-output = ["helix-macros/debug-output"]
compiler = ["pest", "pest_derive"]

# vector features
cosine = []
api-key = []
build = ["compiler"]
vectors = ["cosine", "url"]
server = ["build", "compiler", "vectors", "reqwest"]
full = ["build", "compiler", "vectors"]
bench = ["polars"]
dev = ["debug-output", "server", "bench"]
dev-instance = []
default = ["server"]
production = ["api-key","server"]

[[test]]
name = "capacity_optimization_benches"
path = "benches/capacity_optimization_benches.rs"
