[package]
name = "helix-macros"
version = "0.1.7"
edition = "2024"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"
license = "AGPL-3.0"
description = "Proc macros for HelixDB"

[lib]
proc-macro = true

[dependencies]
dirs = { workspace = true } #unified
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[features]
debug-output = []
default = []

