[package]
name = "hql-tests"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22" 
clap = { workspace = true } #unified
futures = "0.3" 
octocrab = "0.44.1"
serde = { workspace = true } #unified
sha2 = { workspace = true } #unified
tokio = { workspace = true } #unified
