[package]
name = "helix-metrics"
version = "0.1.1"
edition = "2024"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"
license = "AGPL-3.0"
description = "Metrics for HelixDB"

[dependencies]
async-trait = "0.1.88"
chrono = { workspace = true } #unified
flume = { workspace = true } #unified
num_cpus = { workspace = true } #unified
reqwest = { workspace = true } #unified
serde = { workspace = true } #unified
sonic-rs = "0.5.3"
tokio = { workspace = true } #unified
uuid = { workspace = true, features = ["v7"] } #unified
